# tygent-py

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  llms-full.txt  llms.txt  pyproject.toml  pytest.ini  setup.py  tygpg.asc
.github/workflows/: ci.yml  python-publish.yml
cursor-extension/: package.json  tsconfig.json
cursor-extension/src/: extension.ts
docs/editor-extensions/: README.md
examples/: accelerate_example.py  advanced_nodejs_example.ts  advanced_python_example.py  benchmark.py  crewai_example.py  crewai_market_analysis.py  crewai_nodejs_example.ts  customer_support_plan_example.py  dag_example.py  dynamic_dag_example.py  google_adk_market_analysis.py  google_adk_spanner_example.py  google_ai_example.py  google_ai_nodejs_example.ts  google_langchain_market_analysis.py  google_langgraph_market_analysis.py  langchain_integration.py  langchain_market_analysis.py  langflow_example.py  langflow_nodejs_example.ts  langgraph_fsd_example.py  langgraph_integration.py  langgraph_tata_capital_example.py  microsoft_ai_example.py  microsoft_ai_nodejs_example.ts  multi_agent_nodejs_example.ts  multi_agent_python_example.py  nodejs_example.ts  pwc_like_langgraph_fsd_example.py  python_example.py  salesforce_example.py  salesforce_nodejs_example.ts
scripts/: benchmark_examples.py
tests/: __init__.py  test_accelerate.py  test_adaptive_executor.py  test_cycles.py  test_dag.py  test_dynamic_dag_example.py  test_extension_performance.py  test_hooks.py  test_multi_agent.py  test_multi_agent_broken.py.bak  test_patch.py  test_plan_parser.py  test_service_bridge.py
tests/benchmarks/: test_agent_conversion_benchmark.py  test_examples_perf.py  test_scheduler_perf.py
tests/integrations/: test_anthropic.py  test_google_adk.py  test_google_ai.py  test_huggingface.py  test_langsmith.py  test_microsoft_ai.py  test_performance.py  test_planning_adapters.py  test_salesforce.py
tyapi/: README.md  __init__.py  base-planner.py
tyapi/frontend/: index.html
tyapi/service/: __init__.py  app.py  auth.py  cli.py  ingestors.py  service.py  state.py  transform.py
tyapi/tests/: test_app.py  test_state_auth.py  test_transform.py
tygent/: __init__.py  accelerate.py  adaptive_executor.py  agent.py  audit.py  dag.py  multi_agent.py  nodes.py  patch.py  plan_parser.py  prefetch.py  scheduler.py  service_bridge.py  session.py
tygent-py-v1.2-ci-ready/: .gitignore  LICENSE
tygent-py-v1.2-ci-ready/tests/integrations/: test_microsoft_ai.py  test_salesforce.py
tygent-py-v1.2-ci-ready/tygent/: __init__.py  accelerate.py  adaptive_executor.py  dag.py  multi_agent.py  nodes.py
tygent-py-v1.2-ci-ready/tygent/integrations/: google_ai.py  microsoft_ai.py
tygent/integrations/: __init__.py  anthropic.py  claude_code.py  crewai.py  gemini_cli.py  google_adk.py  google_ai.py  huggingface.py  langflow.py  langsmith.py  microsoft_ai.py  openai_codex.py  salesforce.py
tygent/testing/: __init__.py  planning_examples.py
vscode-extension/: package.json
vscode-extension/src/: extension.ts
